# dts-up

./: .eslintrc.js  .gitignore  Cargo.toml  README.md  package.json  tsconfig.json
.github/workflows/: lint.yaml
examples/: basic.rs
node-tests/_test/: bar.d.ts  baz.d.ts  buz.d.ts  foo.d.ts  index.d.ts
src/: async_worker.rs  dtsup.rs  graph.rs  index.ts  lib.rs  module_graph.rs  result.rs  utils.rs
src/ast/: mod.rs  module.rs  module_analyzer.rs  parse.rs  scope.rs  statement.rs  symbol.rs  utils.rs
src/finalizer/: mod.rs
src/graph/: async_worker.rs  graph.rs  mod.rs  module_graph.rs
tests/decl-module-or-global/: expected.d.ts
tests/extend-global-module/: second.d.ts
