[package]
name = "dts-up"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
dashmap = "3.10"
env_logger = "0.9"
log = "0.4"
once_cell = "1.10"
smol_str = "0.1"
petgraph = "0.6.0"
relative-path = "1.7.0"
swc_atoms = "0.2.11"
swc_ecma_ast = "0.73.0"
swc_ecma_codegen = "0.101.0"
swc_ecma_parser = "0.98.1"
swc_ecma_visit = "0.59.0"
swc_common = "0.17.19"
swc = "0.161.1"
num_cpus = "1.13.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
